--- a/templates/web/pm_con.html
+++ b/templates/web/pm_con.html
@@ -1,17 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/pm_con.css">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pm_con.css' %}">
     <title>党群建设</title>
 </head>
 <body>
 <header class="header">
     <div class="container clearfix">
         <div class="logo">
-            <a href=""><img src="/img/logo.png" alt="logo"></a>
+            <a href=""><img src="{% static 'img/logo.png' %}" alt="logo"></a>
         </div>
         <div class="top-right clearfix">
             <ul class="topnav clearfix">
