--- a/templates/web/solve.html
+++ b/templates/web/solve.html
@@ -1,201 +1,459 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/solve.css">
-    <title>解决方案</title>
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static './css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/solve.css' %}">
+	<script src="{% static 'js/jquery-3.4.1.js' %}"></script>
+    <title>楚天高速解决方案</title>
 </head>
 <body>
-<header class="header">
-    <div class="container clearfix">
-        <div class="logo">
-            <a href=""><img src="/img/logo.png" alt="logo"></a>
+	<!--头部-->
+    <header class="header">
+        <div class="container clearfix">
+            <div class="logo">
+				<a href=""><img src="{% static './img/logo.png' %}" alt="logo"></a>
+			</div>
+			<div class="top-right clearfix">
+				<ul class="topnav clearfix">
+					<li>
+						<a href="/index">首页</a>
+						<div class="submenu">
+							<ul>
+								<li class="none"></li>
+								<li>
+									<a href="">关于我们</a>
+								</li>
+								<li>
+									<a href="">产品服务</a>
+								</li>
+								<li>
+									<a href="">联系我们</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="/about">关于我们</a>
+						<div class="submenu">
+							<ul>
+								<li class="none"></li>
+								<li>
+									<a href="">企业简介</a>
+								</li>
+								<li>
+									<a href="">发展历程</a>
+								</li>
+								<li>
+									<a href="">组织构架</a>
+								</li>
+								<li>
+									<a href="">资质荣誉</a>
+								</li>
+								<li>
+									<a href="">联系我们</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="/news">新闻中心</a>
+						<div class="submenu">
+							<ul>
+								<li class="none"></li>
+								<li>
+									<a href="">企业新闻</a>
+								</li>
+								<li>
+									<a href="">行业会议</a>
+								</li>
+								<li>
+									<a href="">媒体聚焦</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="/service">经营业务</a>
+						<div class="submenu">
+							<ul>
+								<li class="none"></li>
+								<li>
+									<a href="">系统集成</a>
+								</li>
+								<li>
+									<a href="">机电养护</a>
+								</li>
+								<li>
+									<a href="">产品信息</a>
+								</li>
+								<li>
+									<a href="">网络信息</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="/solve">解决方案</a>
+						<div class="submenu">
+							<ul>
+								<li class="none"></li>
+								<li>
+									<a href="">智慧交通</a>
+								</li>
+								<li>
+									<a href="">工程施工</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="/construction">党群建设</a>
+						<div class="submenu">
+							<ul>
+								<li class="none"></li>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</div>
         </div>
-        <div class="top-right clearfix">
-            <ul class="topnav clearfix">
-                <li>
-                    <a href="/">首页</a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="none"></li>
-                            <li>
-                                <a href="">关于我们</a>
-                            </li>
-                            <li>
-                                <a href="">产品服务</a>
-                            </li>
-                            <li>
-                                <a href="">联系我们</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <a href="/about">关于我们</a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="none"></li>
-                            <li>
-                                <a href="">企业简介</a>
-                            </li>
-                            <li>
-                                <a href="">发展历程</a>
-                            </li>
-                            <li>
-                                <a href="">组织构架</a>
-                            </li>
-                            <li>
-                                <a href="">资质荣誉</a>
-                            </li>
-                            <li>
-                                <a href="">联系我们</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <a href="/news">新闻中心</a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="none"></li>
-                            <li>
-                                <a href="">企业新闻</a>
-                            </li>
-                            <li>
-                                <a href="">媒体聚焦</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <a href="/service">经营业务</a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="none"></li>
-                            <li>
-                                <a href="">系统集成</a>
-                            </li>
-                            <li>
-                                <a href="">机电养护</a>
-                            </li>
-                            <li>
-                                <a href="">产品信息</a>
-                            </li>
-                            <li>
-                                <a href="">网络信息</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <a href="/solve">解决方案</a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="none"></li>
-                            <li>
-                                <a href="">智慧交通</a>
-                            </li>
-                            <li>
-                                <a href="">工程施工</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <a href="/construction">党群建设</a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="none"></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
+    </header>
+	<!--banner-->
+    <div class="banner">
+            <div class="img">
+                <img src="{% static './img/ipg01.jpg' %}" alt="">
+            </div>
     </div>
-
-
-
-</header>
-
-<div id="selection">
+	<!--主体内容-->
     <div class="container">
-        <h1 class="title">智慧交通</h1>
-        <div class="bus-container">
-            <div class="bus-img">
-                <div class="img ">
-                    <img src="/img/ipg03.png" alt="">
+        <div class="bus-list">
+            <div class="bar clearfix">
+                <ul>
+					<li class="sp activity" id="one" onclick="changeStyle(this)"><a href=""></a>智慧交通</li>
+					<li class="sp" id="two" onclick="changeStyle(this)"><a href=""></a>工程施工</li>
+                </ul>
+            </div>
+            <div class="bus-container">
+                <div class="bus-img">
+                    <a href="">
+                        <div class="img ">
+							<img src="{% static './img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+                    </a>                        
+                </div>
+                <div class="bus-img">
+                    <a href="">
+                        <div class="img ">
+                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
+                		</div>
+                		<div class="introduction">
+                			<div class="subtitle">
+                				<h2>智慧交通</h2>
+                			</div>
+                			<div class="text">
+                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+                			</div>
+                			<div class="learn-more"><a href="">了解更多»</a></div>
+                		</div>
+                    </a>                        
+                </div>
+				<div class="bus-img">
+				    <a href="">
+				        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+				    </a>                        
+				</div>
+				<div class="bus-img">
+				    <a href="">
+				        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+				    </a>                        
+				</div>
+                <div class="bus-img five">
+                    <a href="">
+                        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+                    </a>
+                </div>
+                <div class="bus-img">
+                    <a href="">
+                        <div class="img ">
+                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
+                		</div>
+                		<div class="introduction">
+                			<div class="subtitle">
+                				<h2>智慧交通</h2>
+                			</div>
+                			<div class="text">
+                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+                			</div>
+                			<div class="learn-more"><a href="">了解更多»</a></div>
+                		</div>
+                    </a>                        
+                </div>
+				<div class="bus-img">
+				    <a href="">
+				        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+				    </a>                        
+				</div>
+				<div class="bus-img">
+				    <a href="">
+				        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+				    </a>                        
+				</div>
+				<div class="bus-img">
+				    <a href="">
+				        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+				    </a>                        
+				</div>
+                <div class="bus-img five">
+                    <a href="">
+                        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+                    </a>
+                </div>
+                <div class="bus-img bottom">
+                    <a href="">
+                        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+                    </a>
+                </div>
+                <div class="bus-img bottom">
+                    <a href="">
+                        <div class="img ">
+                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
+                		</div>
+                		<div class="introduction">
+                			<div class="subtitle">
+                				<h2>智慧交通</h2>
+                			</div>
+                			<div class="text">
+                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+                			</div>
+                			<div class="learn-more"><a href="">了解更多»</a></div>
+                		</div>
+                    </a>
+                </div>
+                <div class="bus-img bottom">
+                    <a href="">
+                        <div class="img ">
+                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
+                		</div>
+                		<div class="introduction">
+                			<div class="subtitle">
+                				<h2>智慧交通</h2>
+                			</div>
+                			<div class="text">
+                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+                			</div>
+                			<div class="learn-more"><a href="">了解更多»</a></div>
+                		</div>
+                    </a>
+                </div>
+                <div class="bus-img bottom">
+                    <a href="">
+                        <div class="img ">
+                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
+                		</div>
+                		<div class="introduction">
+                			<div class="subtitle">
+                				<h2>智慧交通</h2>
+                			</div>
+                			<div class="text">
+                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+                			</div>
+                			<div class="learn-more"><a href="">了解更多»</a></div>
+                		</div>
+                    </a>
+                </div>
+                <div class="bus-img five bottom">
+                    <a href="">
+                        <div class="img ">
+							<img src="{% static 'img/homepage03.jpg' %}" alt="">
+						</div>
+						<div class="introduction">
+							<div class="subtitle">
+								<h2>智慧交通</h2>
+							</div>
+							<div class="text">
+								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
+							</div>
+							<div class="learn-more"><a href="">了解更多»</a></div>
+						</div>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="about-us text">
-            <p>智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通智慧交通</p>
-        </div>
+        <div>
+			<div class="list-page">
+				<a href="">上一页</a>
+				<a href="">1</a>
+				<a href="">2</a>
+				<a href="">3</a>
+				<a href="">4</a>
+				<a href="">5</a>
+				<a href="">6</a>
+				<a href="">下一页</a>
+				<a href="">末页</a>
+				<p class="current-page">当前第1页</p>
+				<p>转到第</p>
+				<input class="input " type="mumber" min="1" onkeypress="return"  value="1">
+				<p>页</p>
+			</div>
+		</div>
     </div>
 
-    <div class="container">
-        <h1 class="title">工程实施</h1>
-        <div class="bus-container">
-            <div class="bus-img">
-                <div class="img ">
-                    <img src="/img/ipg03.png" alt="">
-                </div>
-            </div>
-            <div class="about-us text">
-                <p>工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施工程实施</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="footer">
-    <div class="container clearfix">
-        <div class="footer-container">
-            <div class="news bottom">
-                <ul>
-                    <h3>新闻中心</h3>
-                    <li><a href="/news">企业新闻</a></li>
-                    <li><a href="/news">媒体聚焦</a></li>
-                </ul>
-            </div>
-            <div class="bus bottom">
-                <ul>
-                    <h3>经营业务</h3>
-                    <li>
-                        <a href="/service">系统集成</a>
-                    </li>
-                    <li>
-                        <a href="/service">机电养护</a>
-                    </li>
-                    <li>
-                        <a href="/service">产品信息</a>
-                    </li>
-                    <li>
-                        <a href="/service">网络信息</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="obj bottom">
-                <ul>
-                    <h3>解决方案</h3>
-                    <li><a href="/solve">智慧交通</a></li>
-                    <li><a href="/solve">工程施工</a></li>
-                </ul>
-
-            </div>
-            <div class="other bottom">
-                <ul>
-                    <li>版权所有：湖北楚天数科有限公司</li>
-                    <li>ICP备案号：鄂ICP备88888888号</li>
-                    <li>办公地址：洪山区珞瑜东路东湖广场宽tang1楼，电话：027-88888888，传真：027-88888888</li>
-                </ul>
+    <div class="footer">
+        <div class="container clearfix">
+            <div class="footer-container">
+                <div class="news bottom">
+					<ul>
+						<h3>新闻中心</h3>
+						<li><a href="">企业新闻</a></li>
+						<li><a href="">媒体聚焦</a></li>
+					</ul>
+				</div>
+				<div class="bus bottom">
+					<ul>
+						<h3>经营业务</h3>
+						<li>
+							<a href="">系统集成</a>
+						</li>
+						<li>
+							<a href="">机电养护</a>
+						</li>
+						<li>
+							<a href="">产品信息</a>
+						</li>
+						<li>
+							<a href="">网络信息</a>
+						</li>
+					</ul>
+				</div>
+				<div class="obj bottom">
+					<ul>
+						<h3>解决方案</h3>
+						<li><a href="">智慧交通</a></li>
+						<li><a href="">工程施工</a></li>
+					</ul>
+				</div>
+				<div class="other bottom">
+					<ul>
+						<li>版权所有：湖北楚天数科有限公司</li>
+						<li>ICP备案号：鄂ICP备88888888号</li>
+						<li>办公地址：洪山区珞瑜东路东湖广场宽tang1楼，电话：027-88888888，传真：027-88888888</li>
+					</ul>
+				</div>
             </div>
         </div>
     </div>
-</div>
 
 </body>
+<script>
+	function changeStyle(e){
+		var one = document.getElementById("one");
+		var two = document.getElementById("two");
+		one.className="sp ";
+		two.className="";
+		e.className += "activity";
+	}
+</script>
+
 </html>
