--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -62,7 +62,7 @@
 						</div>
 					</li>
 					<li>
-						<a href="/news?type=test">新闻中心</a>
+						<a href="/news">新闻中心</a>
 						<div class="submenu">
 							<ul>
 								<li class="none"></li>
